fixed overlapping sort by

--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -120,6 +120,7 @@
     margin-left: auto;
     min-width: 85px;
     font-size: 14px;
+    z-index:10;
   }
 
   &__sort-options{
