--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -26,7 +26,7 @@
   &__mobile-facet-container {
     z-index: 9999;
     background-color: $color__white;
-    margin-top: 20px;
+    margin: 20px 0 30px 0;
 
     &.enabled {
       position: absolute;
