--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-faceted-navigation/css/module-faceted-navigation.css
@@ -42,7 +42,7 @@
 
 .faceted-navigation-header__active-filters { width: 100%; }
 
-.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; font-size: 14px; }
+.faceted-navigation-header__sort-options, .faceted-navigation-header__filters-actions { margin-left: auto; min-width: 85px; font-size: 14px; z-index: 10; }
 
 .faceted-navigation-header__sort-options { margin-top: 4px; }
 
@@ -69,7 +69,7 @@
 
 .faceted-navigation__list-item { padding-left: 4px; }
 
-.faceted-navigation__mobile-facet-container { z-index: 9999; background-color: #FFF; margin-top: 20px; }
+.faceted-navigation__mobile-facet-container { z-index: 9999; background-color: #FFF; margin: 20px 0 30px 0; }
 
 .faceted-navigation__mobile-facet-container.enabled { position: absolute; top: 0; left: 0; padding: 0; }
 
